--- a/join.css
+++ b/join.css
@@ -1,15 +1,20 @@
-/* login.css */
-
 body {
-    
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans KR', sans-serif;
-  background: linear-gradient(to right, #1e3c72, #2a5298);
+  background: #f5dfff;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.join-field {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .container {
@@ -24,7 +29,7 @@ body {
 h2 {
   margin-bottom: 24px;
   font-size: 24px;
-  color: #333;
+  color: #000000;
 }
 
 input[type="text"] {
@@ -41,7 +46,7 @@ button {
   width: 100%;
   padding: 12px;
   margin-top: 16px;
-  background-color: #1e88e5;
+  background-color: #7b1ee5;
   color: white;
   font-size: 16px;
   border: none;
@@ -51,5 +56,5 @@ button {
 }
 
 button:hover {
-  background-color: #1565c0;
+  background-color: #560daa;
 }
