--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: #f9f9f9;
+  background: #ffffff;
   text-align: center;
 }
 
@@ -30,7 +30,7 @@ h1 {
   height: 14px;
   text-align: center;
   font-size: 14px;
-  color: magenta;
+  color: rgb(0, 0, 0);
 }
 
 .card-stack {
@@ -122,6 +122,24 @@ h1 {
   gap: 8px;
   margin: 20px auto;
   flex-wrap: wrap;
+}
+
+.draw-btn {
+  background-color: #b166cf;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.draw-btn:hover {
+  background-color: #560daa;
+}
+
+.draw-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
 
 .discard-area .card-stack .card {
