--- a/style.css
+++ b/style.css
@@ -155,7 +155,8 @@ h1 {
   width: 100%; height: 100%;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start; /* 변경됨 */
+  padding-top: 20vh; /* 위로 띄움 */
   justify-content: center;
   z-index: 10;
   animation: fadeIn 0.2s ease-out;
