--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: sans-serif;
   background: url('res/login-bg.png') no-repeat center center fixed;
   background-size: cover;
+  font-size: 48px;
   text-align: center;
 }
 
@@ -24,13 +25,13 @@ h1 {
   grid-template-columns: repeat(5, 160px);
   gap: 10px;
   justify-content: center;
-  margin-bottom: 15px;
+  margin-bottom: 48px;
 }
 
 .score-row div {
   height: 14px;
   text-align: center;
-  font-size: 14px;
+  font-size: 30px;
   color: rgb(0, 0, 0);
 }
 
@@ -47,7 +48,7 @@ h1 {
 }
 
 .opponent-area-card {
-  margin-top: 200px;
+  margin-top: 240px;
 }
 
 .opponent-area-card .card-stack {
@@ -216,12 +217,17 @@ h1 {
 }
 
 .hand {
-  width:700px;
+  width: 450px;
   display: flex;
   justify-content: center;
   gap: 8px;
   margin: 20px auto;
   flex-wrap: wrap;
+}
+
+.hand .card {
+  width: 100px;
+  height: 150px;
 }
 
 .draw-btn {
@@ -250,9 +256,6 @@ h1 {
   margin-top: 0;
 }
 
-/* 모달 */
-
-/* 모달 개선 스타일 */
 .modal {
   position: fixed;
   top: 0; left: 0;
