--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ h1 {
   width: 20px;
   height: 20px;
   top: 16px;
-  left: 22px;
+  left: 20px;
   border-radius: 50%;
   color: white;
   font-size: 20px;
@@ -102,8 +102,8 @@ h1 {
 .card .corner.bottom-right {
   width: 20px;
   height: 20px;
-  bottom: 15px;
-  right: 22px;
+  bottom: 16px;
+  right: 20px;
   border-radius: 50%;
   color: white;
   font-size: 20px;
@@ -217,7 +217,7 @@ h1 {
 }
 
 .hand {
-  width: 450px;
+  width: 700px;
   display: flex;
   justify-content: center;
   gap: 8px;
@@ -226,8 +226,8 @@ h1 {
 }
 
 .hand .card {
-  width: 100px;
-  height: 150px;
+  width: 160px;
+  height: 240px;
 }
 
 .draw-btn {
@@ -271,7 +271,7 @@ h1 {
 
 .modal-content {
   background: #fff;
-  padding: 16px 24px;
+  padding: 60px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   text-align: center;
@@ -288,10 +288,10 @@ h1 {
 }
 
 .modal-buttons button {
-  padding: 10px 18px;
-  font-size: 14px;
+  padding: 30px;
+  font-size: 30px;
   border: none;
-  border-radius: 6px;
+  border-radius: 10px;
   cursor: pointer;
   font-weight: bold;
   background-color: #eeeeee;
